--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -17,6 +17,7 @@
 @brand-primary:         #4582EC;
 @brand-success:         #3FAD46;
 @brand-info:            #5bc0de;
+@brand-alternate:       #ecaf45;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
@@ -859,7 +860,7 @@
 @blockquote-font-size:        (@font-size-base * 1.25);
 //** Blockquote border color
 @blockquote-border-color:             @brand-primary;
-@blockquote-border-inverse-color:     @brand-warning;
+@blockquote-border-inverse-color:     @brand-alternate;
 //** Page header border color
 @page-header-border-color:    #ddd;
 //** Width of horizontal description list titles
