--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1493,7 +1493,7 @@ blockquote .small:before {
 blockquote.pull-right {
   padding-right: 15px;
   padding-left: 0;
-  border-right: 25px solid #f0ad4e;
+  border-right: 25px solid #ecaf45;
   border-left: 0;
   text-align: right;
 }
